# pdftransL

./: .dockerignore  .env.example  .gitignore  Dockerfile  HERMES_TASK.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  quickstart.ps1  quickstart.sh  requirements.txt  run_parser_agent.py  run_translator_agent.py
agents/: parser_agent.py  translator_agent.py
backend/: manage.py
backend/api/: admin.py  apps.py  middleware.py  models.py  services.py  tasks.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_serverconfig.py  0003_translationjob_pause_requested_and_more.py  0004_translationjob_stage_plan.py  0005_translationjob_started_at.py  0006_translationjob_owner.py
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
bot/: __main__.py  main.py  settings_store.py
cpp/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/core/: config.cpp  config.h  models.cpp  models.h
cpp/src/export/: exporter.cpp  exporter.h  html_export.cpp  html_export.h  latex_export.cpp  latex_export.h
cpp/src/gui/: glossarywidget.cpp  glossarywidget.h  jobdetailwidget.cpp  jobdetailwidget.h  joblistwidget.cpp  joblistwidget.h  mainwindow.cpp  mainwindow.h  settingswidget.cpp  settingswidget.h  uploadwidget.cpp  uploadwidget.h
cpp/src/llm/: anthropic_client.cpp  anthropic_client.h  base.h  fallback_client.cpp  fallback_client.h  openai_client.cpp  openai_client.h  ratelimit.cpp  ratelimit.h
cpp/src/parsing/: splitter.cpp  splitter.h  subprocess_backend.cpp  subprocess_backend.h
cpp/src/pipeline/: desktop_pipeline.cpp  desktop_pipeline.h
cpp/src/quality/: reviewer.cpp  reviewer.h  validators.cpp  validators.h
cpp/src/rag/: embeddings.cpp  embeddings.h  glossary.cpp  glossary.h  store.cpp  store.h
cpp/src/translation/: checkpoint.cpp  checkpoint.h  masker.cpp  masker.h  prompts.cpp  prompts.h  translator.cpp  translator.h
docs/: ARCHITECTURE.md  FILES.md  FINETUNING.md  IMPROVEMENTS.md  OLLAMA.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  format.js  main.jsx  styles.css
frontend/src/components/: GlossaryPanel.jsx  JobDetail.jsx  JobList.jsx  SegmentReview.jsx  SettingsPanel.jsx  StageStepper.jsx  UploadForm.jsx
integrations/django_example/: README.md
integrations/django_example/pdftranslator/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
pdftransl/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_setup.py  masking.py  models.py  pipeline.py  progress.py  resources.py  service.py
pdftransl/export/: __init__.py  docx_native.py  exporter.py  formula_render.py  html.py  katex_assets.py  latex.py
pdftransl/llm/: __init__.py  anthropic_client.py  base.py  fake.py  fallback.py  openai_compat.py  ratelimit.py  registry.py
pdftransl/parsing/: __init__.py  base.py  cache.py  docling_backend.py  grobid_backend.py  html_tables.py  marker_backend.py  mineru_api.py  mineru_local.py  nougat_backend.py  pymupdf_backend.py  scan_detect.py  splitter.py  text_quality.py  vlm_ocr_backend.py
pdftransl/quality/: __init__.py  backtranslation.py  document_repair.py  latex_check.py  latex_fix.py  render_check.py  reviewer.py  scoring.py  validators.py
pdftransl/rag/: __init__.py  embeddings.py  glossary.py  retriever.py  store.py
pdftransl/storage/: __init__.py  repository.py
pdftransl/translation/: __init__.py  checkpoint.py  doc_context.py  figures.py  prompts.py  translator.py
tests/: test_audit_fixes.py  test_export.py  test_improvements.py  test_masking.py  test_new_features.py  test_parser_fallback.py  test_pause_and_resilience.py  test_pipeline.py  test_progress_and_batching.py  test_quality_fixes.py  test_rag.py  test_repair_and_retranslate.py  test_resources_and_ocr.py  test_resume_and_backends.py  test_robustness_round3.py  test_scan_and_formulas.py  test_splitter.py  test_text_quality.py  test_throttle_and_logging.py  test_translator.py  test_validators.py  test_vision_and_engines.py
utils/: file_utils.py
