[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftransl"
version = "0.13.0"
description = "Scientific PDF translation engine: parsing (LaTeX formulas, layout, figures), parallel LLM/VLM translation with self-verification, translation memory / RAG, DOCX/PDF/HTML export, Django backend, React UI, Telegram bot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# High-quality scientific PDF parsing (formulas -> LaTeX). Heavy: downloads models.
mineru = ["mineru[core]>=2.0"]
# Lightweight parsing fallback (text + embedded images, no formula recognition).
pymupdf = ["PyMuPDF>=1.24"]
# Alternative scientific-PDF parsers (lighter than MinerU, still ML-based).
marker = ["marker-pdf>=1.0"]
docling = ["docling>=2.0"]
nougat = ["nougat-ocr>=0.1"]        # GROBID needs a running server, not a pip package
# Neural embeddings for the translation memory (otherwise a hashing fallback is used).
rag = ["sentence-transformers>=3.0"]
# DOCX/PDF export engines (pandoc is an external binary, install separately).
# matplotlib renders formulas to images for readable DOCX without pandoc;
# KaTeX for offline HTML/PDF math is vendored via the frontend npm install.
export = ["python-docx>=1.1", "playwright>=1.40", "matplotlib>=3.7"]
# Django backend (web API + React SPA hosting).
backend = ["Django>=4.2", "celery>=5.3", "redis>=5.0", "gunicorn>=21.0"]
# Telegram bot.
bot = ["aiogram>=3.4"]
dev = ["pytest>=8.0"]

[project.scripts]
pdftransl = "pdftransl.cli:main"

[tool.setuptools.packages.find]
include = ["pdftransl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
